--- a/1번/1.md
+++ b/1번/1.md
@@ -4,4 +4,5 @@
 - 기억에 의존하지 말고 검색해서 찾아오셔도 됩니다.
 - inline (인라인) 태그와 block (블록) 태그의 차이점을 찾아오시면 됩니다.
 
-(여기에 작성)
+div는 블록요소, span은 인라인요소
+_div는 한줄을 전부 차지해서 세로로 span은 콘텐츠 일부만 감싸고 있어 줄바꿈 없이 가로로 배치된다._
