--- a/1번/1.md
+++ b/1번/1.md
@@ -1,3 +1,5 @@
 ### console.log와 return의 차이가 무엇인가요?
 
 (여기에 작성)
+console.log는 직접적인 화면에 나오는 결과값이 아닌 개발자 도구에서만 확인할 수 있는 결과값을 도출한다.
+return은 직접적으로 화면에 나오는 결과값을 도출한다.
