--- a/9번/9.md
+++ b/9번/9.md
@@ -1,3 +1,7 @@
 ### 애니메이션 이벤트 구현하는 법을 4단계로 글로 작성해보세요.
 
 (여기에 작성)
+애니메이션 발생 전의 모습을 구현
+애니메이션 발생 후의 모습을 구현
+transition을 사용하여 구현하기
+eventlistener을 사용하여 적용시키기
